--- a/donate.html
+++ b/donate.html
@@ -96,7 +96,7 @@ text-decoration: none;
   </main>
   <br>
 <footer>
-  <p1>©Nibble 2022. All Rights Reserved.</p1>
+  <p1>©GoLocal 2022. All Rights Reserved.</p1>
 </footer>
 </Body> 
 </Html>
