added the homepage and learn page

--- a/donate.html
+++ b/donate.html
@@ -38,18 +38,18 @@ text-decoration: none;
 <nav>
 <ul>
 <li>
-<a href="#"> GoLocal </a>
+<a href="homepage.html"> GoLocal </a>
 </li>
 <li>
-<a href="#"> Home </a>
+<a href="homepage.html"> Home </a>
 </li>
 <li>
-<a href="#"> Find </a>
+<a href="findfarms.html"> Find </a>
 </li>
 <li>
-<a href="#"> Learn </a>
+<a href="learn.html"> Learn </a>
 </li>
-<li> <a href="#"> Donate </a>
+<li> <a href="donate.html"> Donate </a>
 </li>
 </ul>
 </nav>
