--- a/homepage.html
+++ b/homepage.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>GoLocal HomePage</title>
+	<link rel="stylesheet" type="text/css" href="./static/css/homepage.css">
+</head>
+<body>
+	<!--Navigaion Bar-->
+	<nav class="col-12">
+		<div><a href="homepage.html">GoLocal</a></div>
+		<ul>
+			<li><a href="homepage.html">Home</a></li>
+			<li><a href="findfarms.html">Find</a></li>
+			<li><a href="learn.html">Learn</a></li>
+			<li><a href="donate.html">Donate</a></li>
+		</ul>
+	</nav>
+	<section class="col-12 farm">
+		<div class="first-paragraph">
+			<p>Buying fom local farms is a great way to save money and help the environment.The produce will stay fresh and it does not need to be exported.At GoLocal, we will help you to find the local farms close to you location, where you can buy produce.	
+			Alternatively, we will help to find grocerystores that purchase from local farms.</p>
+		</div>
+		<div class="first-image">
+			<img src="./static/first.jpg" alt="Farmer">
+		</div>
+	</section>
+	<section class="col-12 thank-you">
+		<div class="second-image"><img src="./static/second.jpg" alt="learn"></div>
+		<div class="second-paragraph">
+			<p>At GoLocal, you can learn more about the farms near you. Ifyou want to support your local farms, you can head over to the donate tab. You can choose the amount you want to donate, but it must be above $1. This will be powered through PayPal, which makes this process secure.</p>
+		</div>
+	</section>
 
+	<footer>
+		<p>&copy; Global 2022 All Rights Reserved</p>
+	</footer>
+
+</body>
+</html>
