--- a/learn.html
+++ b/learn.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Learn</title>
+	<link rel="stylesheet" type="text/css" href="./static/css/learnstyle.css">
+</head>
+<body>
+	<!--Navigaion Bar-->
+	<nav class="col-12">
+		<div><a href="homepage.html">GoLocal</a></div>
+		<ul>
+			<li><a href="homepage.html">Home</a></li>
+			<li><a href="findfarms.html">Find</a></li>
+			<li><a href="learn.html">Learn</a></li>
+			<li><a href="donate.html">Donate</a></li>
+		</ul>
+	</nav>
+	<h1 class="text">Learn more about the grocery stores that purchase from local farms</h1>
 
+	<section class="col-12">
+		<article class=" first-side">
+			<div class="side"><img src="./static/replace.jpg" alt="stuff"></div>
+			<div class="list1">
+				<ul>
+					<li>Offers a wide selection of  natural and organic foods, such as fresh produce, bulk foods, meats, etc., and most of them are harvest from local farms. </li>
+					<li>Operates with a focus on the environment and sustainability</li>
+					<li>Supports local farmers and charities</li>
+				</ul>
+			</div>
+		</article>
+
+		<article class=" second-slide">
+			<div class="side"><img src="./static/replace.jpg" alt="something"></div>
+			<div class="list2">
+				<ul>
+					<li>Offers a wide selection of local, organic and natural foods</li>
+					<li>Has done a variety of actions to support the environment such as eliminating use of plastic bags, installing solar panels, etc.</li>
+					<li>Supports local farmers and charities</li>
+				</ul>
+			</div>
+		</article>
+	</section>
+
+	<footer>
+		<p>&copy; Global 2022 All Rights Reserved</p>
+	</footer>
+
+</body>
+</html>
