--- a/findfarms.html
+++ b/findfarms.html
@@ -41,15 +41,15 @@ text-decoration: none;
 <a href="#"> GoLocal </a>
 </li>
 <li>
-<a href="#"> Home </a>
+<a href="homepage.html"> Home </a>
 </li>
 <li>
-<a href="#"> Find </a>
+<a href="findfarms.html"> Find </a>
 </li>
 <li>
-<a href="#"> Learn </a>
+<a href="learn.html"> Learn </a>
 </li>
-<li> <a href="#"> Donate </a>
+<li> <a href="donate.html"> Donate </a>
 </li>
 </ul>
 </nav>
